syntax = "proto3";
package inner_message;
option  go_package = "/inner";

message Error
{
}

message GateMsgWrapper
{
    string GateSession = 1;
    string MsgName     = 2;
    bytes  Data        = 3;
}

// 存储信息
message G2DModelSave
{
    bytes  Data      = 1;
    string ModelName = 2;
    int64  RID       = 3;
}

// login 请求所有角色数据
message L2DAllUserReq
{
}

message D2LAllUserRes
{
    bytes Data = 1; // models.GameUser
}

// login 请求回存新玩家
message L2DUserSave
{
    bytes Data = 1; // models.GameUser
}

// game请求role数据
message G2DRoleReq
{
    int64 CallbackId = 1; // 回调Id
    int64 RID        = 2;
}

message D2GRoleRes
{
    int64              CallbackId = 1; // 回调Id
    int32              valid      = 2; // 数据是否找到 0.成功 1.未找到角色
    int64              RID        = 3;
    map<string, bytes> WholeInfo  = 4; // 角色各个模块的数据
}

// gatesession断开,gate通知game
message GT2GSessionClosed
{
    string GateSession = 1; // 断开的session
}

// login通知gate 为session分配gameActor
message L2GTSessionAssignGame
{
    string GateSession = 1; //
    string GameActorId = 2; // 分配的游戏Actor
}

// game通知login，玩家离线
message G2LRoleOffline
{
    int64  UID         = 1;
    int64  RID         = 2;
    string GateSession = 3; //
}
// game通知login，玩家离线
message G2DGameStop
{
}

// login通知game,玩家顶号，旧session失效
message L2GTUserSessionDisabled
{
    string GateSession = 1;
    int64  UID         = 2;
}