syntax = "proto3";
package outer;
option  go_package = "/outer";


message HeartReq {
    int64 ClientTimestamp = 1;
}
message HeartRsp {
    int64 ClientTimestamp = 1;
    int64 ServerTimestamp = 2;
}

message LoginReq {  // tag:login
    // 平台uuid
    string PlatformUUID  = 1;
    // 平台名字
    string PlatformName  = 2;
    // 设备ID
    string DeviceID      = 3;
    // 系统
    string OS            = 4;
    // 版本号
    string ClientVersion = 5;
    // 签名token
    string Token         = 6;
}

message LoginRsp {
    string  RID          = 1;
    bool    NewPlayer    = 2;
    string  Token        = 3;
}

message EnterGameReq { // tag:player
    string  RID        = 1;
    bool    NewPlayer  = 2;
    string  Checksum   = 3;
}

message EnterGameRsp {
    // 是否是新玩家
    bool NewPlayer = 1;
}

// 角色信息
message RoleInfo{
    string  UID     = 1;
    string  RID     = 2;
    uint64  ShortID = 3;
    string  Phone   = 4;
    string  Name    = 5;
    string  Icon    = 6;
}
